# projet901

./: .gitignore  README.md  halo.md  pyproject.toml  timestep.py
files/: Makefile  check_submission.sh  d2q9-bgk.c  env.sh  gmon.out  job_submit_d2q9-bgk
numbajacobi/: hellocomm.py
pylattice/: d2q9-bgk.py  input_128x128.params  rewrite.py
pylattice/arch/: numba_numpy_seq.py  numba_parallel.py  pure_python.py
